<resources>
    <string name="app_name">Taskify</string>
    <string name="text_about_title">About</string>
    <string name="text_about_desc">Taskify! With this app you can create, edit, delete and organize your tasks.</string>
    <string name="text_about_visit_title">Visit</string>
    <string name="text_about_visit_url"><u>https://github.com/abdulist/Taskify</u></string>
    <string name="text_app_version">v%s (%d)</string>
    <string name="important_task">Important Task?</string>
    <string name="task_name">Task name</string>
    <string name="license">license</string>
    <string name="author">author</string>
    <string name="koneksi_error">Koneksi error</string>
    <string name="channel_name">Reminder</string>
    <string name="channel_desc">Reminding of your Incomplete task</string>
    <string name="notif_title">Check your Task!</string>
    <string name="notif_text">Do you have an Incomplete task to do?</string>

</resources>